Feat: added return api xml and binary
